# Cost-Aware-Routing-for-Web-Usage-Agents

./: .gitignore  README.md  REPO_STATUS.md  conda-p79_ai-lock.yml  pyproject.toml  requirements-lock.txt
.auth/: reddit_state.json  shopping_state.json
configs/: default.yaml  exp_shopping_small.yaml
data/tasks/: sample_tasks.jsonl
p79/agents/: qwen3vl_agent.py
p79/envs/: vwa_wrapper.py
p79/logging/: logger.py
p79/policies/: router.py
p79/utils/: config.py  timers.py  tokens.py
results/shopping_small/run_1770027946/: episode_0_summary.json  episode_1_summary.json  run_meta.json
results/shopping_small/run_1770027946/task_configs/: 0.json  1.json
results/shopping_small/run_1770028059/: episode_0_summary.json  episode_1_summary.json  episode_2_summary.json  episode_3_summary.json  episode_4_summary.json  eval_results.csv  run_meta.json
results/shopping_small/run_1770028059/task_configs/: 2.json  3.json  4.json
scripts/: eval_vwa_runs.py  run_batch.py  run_episode.py  run_one_vwa_episode.py  run_vwa_batch.py  smoke_test_vwa.py  start_vwa_docker.sh  summarize_results.py  vwa_env.sh
